@@ -1,4 +1,8 @@
 2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
+	*schedule.cc: A check was added for the ending of some schedules. Every hour the ending
+		is called and this check will prevent some erratic behavior.
+
+2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
 	*schedule.cc: Improved Automaton baking in Silver Seed.
 		display_wares cost changed in SI (needed for Automaton).
 
